<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/master_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dat153.nameapp.LearningModeActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="302dp"
        android:layout_height="25dp"
        android:layout_marginBottom="47dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSwitcher" />



    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="384dp"
        android:layout_height="72dp"
        android:layout_marginTop="440dp"
        android:background="@color/primary_material_light_1"
        android:backgroundTint="@color/primary_material_light_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="11dp"
            android:layout_toStartOf="@+id/button6"
            android:onClick="checkGuess"
            android:text="@string/guess"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button6"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button5"
            android:layout_alignBottom="@+id/button5"
            android:layout_centerHorizontal="true"
            android:onClick="runGame"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button5" />

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button6"
            android:layout_alignBottom="@+id/button6"
            android:layout_marginStart="14dp"
            android:layout_toEndOf="@+id/button6"
            android:onClick="quitLearningMode"
            android:text="@string/end_game" />
    </RelativeLayout>

    <ViewSwitcher
        android:id="@+id/viewSwitcher"
        android:layout_width="340dp"
        android:layout_height="322dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_description"
            android:gravity="center"
                   
            app:srcCompat="@drawable/internal_thomas"
            tools:layout_editor_absoluteX="300dp"
            tools:layout_editor_absoluteY="257dp" />

    </ViewSwitcher>

</android.support.constraint.ConstraintLayout>
