...
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/your_score"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
...
